# TLM

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-timesfm.txt  requirements.txt  run_web.py  test_cascade.py
.claude/: settings.local.json
0756/: app.py  main3新.py  煤流协同控制程序.py
0756/static/: app.js  styles.css
0756/templates/: index.html
docs/: SPEED_CONTROL.md  速度控制策略文档.md
legacy/: coal_conveyor_sim.py
scripts/: fix_quotes.py  patch_decimal.py  patch_speed_display.py  predict_traffic.py  refactor_structure.py
src/core/: config.py  data.py  logging_config.py  pid.py  simulator.py  state.py
src/predict/: predictor.py
src/web/: app.py  cli.py  replay.py  runtime.py
src/web/static/: dashboard.css  dashboard.js
src/web/templates/: dashboard.html
tests/: conftest.py  test_app.py  test_config.py  test_data.py  test_pid.py  test_predictor.py  test_simulator.py  test_state.py
